# jap_learn

./: Cargo.toml
benches/: split_bench.rs
src/: dictionary.rs  dictionary_test.rs  lang.rs  main.rs  quiz.rs  randomizer.rs  repetition.rs  repetitions.rs  selector.rs  word.rs  writing.rs
src/data_provider/: card_sets.rs  card_stats.rs  mod.rs  voice.rs  words.rs
